--- a/module2/index.html
+++ b/module2/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title></title>
+<style type="text/css"></style>
+
+/*Responsive Framework.*/
+.row{
+	width 100%;
+}
+
+////////////**DESKTOP VERSION**//////////////////
+@media (min-width: 992px)
 </head>
 <body>
-
+"test"
 </body>
 </html>
  
