--- a/module2/index.html
+++ b/module2/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title></title>
+<title>testo</title>
 <style type="text/css"></style>
 
 /*Responsive Framework.*/
@@ -15,7 +15,7 @@
 @media (min-width: 992px)
 </head>
 <body>
-"test"
+<p> test </p>
 </body>
 </html>
  
