--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1> Hello Coursera! life is awesome<h1/>
+<h1> Hello Coursera! life is awesome it´s  <h1/>
 </body>
 </html>
