--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -1,65 +1,77 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+<title>Module 3</title>
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Module 3 assignment</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  <script src="js/jquery-3.6.0.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="css/style.css">
-
+<link rel="stylesheet" type="text/css" href="style.css">
 
 
 
 <body>
-  <header>
-  <nav class="navbar navbar-default navbar-static-top">
+
+
+<nav class="navbar" id="top">
   <div class="container-fluid">
-  <a id="brand" class="navbar-brand text-left" href="#"><h1>Food, LLC</h1></a>
 
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarNav" aria-expanded="false">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+      </button>
+      <a class="navbar-brand" href="#">Food, LLC</a>
+    </div>
 
-  <div class="text-right collapse navbar-collapse hide-md hide-sm -visible-xs" id="navbarNav">
-    <ul class="navbar-nav">
-    <li><a href="#">Beef</a></li>
-    <li><a href="#">Chicken</a></li>
-    <li><a href="#">Sushi</a></li>
-    </ul>
+    <div class="collapse" id="myNavbar">
+      <ul class="nav navbar-nav visible-xs">
+        <li><a class="menu-item" href="#">Chicken</a></li>
+        <li><a class="menu-item" href="#">Beef</a></li> 
+        <li><a class="menu-item" href="#">Sushi</a></li> 
+      </ul>
+    </div>
+
   </div>
-  </div><!--.mynav -->
-  </div><!--.navContainer -->
-  </nav>
-  </header>
-  <h2 class="text-center">Our Menu</h2>
-  <div class="container">
-  <div id="mainsection" class="col-xs-12">
-  <h3 class="text-center">Chicken</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et fermentum ligula. Aenean sollicitudin rhoncus fermentum. Maecenas laoreet, sem non dictum venenatis, mauris ipsum maximus mi, non pulvinar orci nisi a justo. Pellentesque vehicula convallis leo at feugiat. Praesent finibus lorem nibh. Mauris pellentesque sagittis eleifend. Donec rhoncus eros a ex hendrerit tincidunt. Donec quis tempus tellus. Pellentesque vitae ipsum sed sapien consectetur posuere.</p>
-<p>Suspendisse dignissim tristique sem vitae viverra. Pellentesque pulvinar mi a lorem lobortis euismod. Maecenas massa nisl, venenatis ullamcorper metus eu, semper dapibus nunc. Praesent vulputate aliquet arcu. Fusce suscipit arcu ut ipsum varius, sed sagittis elit vestibulum. Morbi ac bibendum massa. Curabitur pellentesque auctor ipsum, sed varius turpis pretium sed. Sed augue purus, accumsan id diam sed, ullamcorper lobortis justo. Nulla facilisi. Praesent lacinia iaculis pellentesque. Nulla sed finibus nibh, at vulputate purus. Aliquam erat volutpat. In ac est a nisi volutpat mattis vitae sed est.</p>
-<p>Duis ullamcorper nulla sit amet tortor condimentum, at molestie massa hendrerit. Nulla quis scelerisque lectus. Vivamus placerat, erat eget tincidunt bibendum, felis metus tincidunt mauris, ac consequat odio arcu ut diam. Etiam sit amet aliquet augue, eget vestibulum magna. Donec at facilisis elit. Morbi eu massa iaculis, aliquet massa sit amet, sollicitudin mi. Integer commodo metus eu massa tempor, vitae sodales enim fermentum. Nam lobortis dui vel odio imperdiet bibendum. Vestibulum aliquam purus orci, vitae pharetra felis pulvinar sit amet. Morbi sodales arcu ligula, maximus rutrum risus ultricies vitae. Ut velit nibh, feugiat eleifend ultricies quis, volutpat in arcu. Fusce dapibus erat risus, nec volutpat nisl pellentesque non. Nam nisi sem, dictum at neque sit amet, fermentum dictum mi. Phasellus rutrum, enim at vehicula hendrerit, ex magna elementum orci, id malesuada nulla leo non dui. Proin vitae interdum dui.</p>
-<p>Donec semper hendrerit magna, ac finibus neque sodales quis. Quisque at tortor faucibus, vehicula quam nec, scelerisque lorem. Sed placerat eros vel fringilla ullamcorper. Ut convallis quam sit amet felis vestibulum, ac tristique metus luctus. Etiam commodo lacus in quam eleifend, sed dictum est rutrum. Integer pretium rhoncus sem at facilisis. Maecenas quis iaculis odio. Fusce lectus sem, aliquet nec elit et, imperdiet tristique ex. Curabitur risus massa, cursus sit amet commodo sed, varius vel dui. Ut tincidunt velit orci, at varius eros aliquam a. Proin posuere est aliquet ex vestibulum accumsan vel in lectus. Vivamus quis est est. Curabitur euismod nisi at dolor facilisis vulputate. Sed vel hendrerit magna, vitae sodales neque. Donec dolor lorem, pellentesque non urna nec, consectetur congue velit.</p>
-<p>Morbi vulputate feugiat lorem, vel efficitur turpis imperdiet id. Vivamus eu ultrices justo, et tincidunt erat. Proin interdum in mauris id gravida. Proin lacinia urna non elit lobortis laoreet. Maecenas consectetur elementum mi in aliquam. Aenean fermentum ligula vitae odio pellentesque iaculis. Duis convallis nec augue vel tempor. Fusce vulputate sapien eu enim dignissim, vestibulum maximus augue posuere. Pellentesque maximus ex eget augue venenatis malesuada. Maecenas mattis vel tortor vel sodales. Ut aliquet massa quis ipsum eleifend euismod ut non magna. Sed tincidunt imperdiet enim, vitae molestie velit pulvinar a. Etiam vel neque in mauris hendrerit malesuada a eget orci. Integer porttitor velit turpis, eget rhoncus ex sagittis eget.</p>
-<p>Integer eget leo non urna ultricies bibendum non non enim. Vivamus ultrices mauris quis lectus porttitor pretium. Praesent consectetur, ligula in ornare tempor, dui nibh semper neque, id ultrices lacus justo vel nulla. Etiam quam mauris, cursus blandit ornare sit amet, ornare vel purus. Nam non tempus dolor. Etiam molestie est eu aliquet tincidunt. Nam eget velit commodo, ornare arcu ut, placerat erat. Nunc et orci in leo bibendum viverra eget in dolor. Maecenas eu ante augue. Morbi ultricies turpis eget tempor faucibus. Ut facilisis nunc quis ligula varius ornare. Donec suscipit enim sed lorem finibus, quis auctor dolor scelerisque. Donec eu lacus sit amet quam congue convallis eget id massa.</p>
-<p>Cras at ligula eu magna ultrices pellentesque. Proin maximus ante ac neque molestie tincidunt. Nullam vitae leo sit amet ipsum tempus dignissim. Ut a metus viverra lacus placerat ultricies eu sed ligula. Cras lectus enim, accumsan id dapibus at, faucibus non turpis. Etiam condimentum sagittis orci ac lobortis. Cras interdum lacus enim, sit amet facilisis leo finibus a. Ut quis eros blandit, aliquet nisi in, porttitor diam. Suspendisse euismod luctus turpis, vitae sodales dolor ultricies eu. Pellentesque quis quam ex. Nullam a tellus blandit, rutrum quam sit amet, malesuada ante. Nam vitae tempus mi. Aenean at erat vel felis pulvinar aliquet nec id magna. Nunc dictum at orci quis sollicitudin.</p>
-<p>Aliquam imperdiet velit nec blandit semper. In eu varius arcu, sed dictum augue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Quisque gravida odio risus, ut sollicitudin orci pretium mattis. Aenean vel convallis mauris. Mauris condimentum turpis ac dapibus rutrum. Pellentesque orci felis, pretium vel aliquam in, condimentum non urna.</p>
+</nav>
+
+<h1 class="main-title">Our Menu</h1>
+
+
+
+<div class="row">
+
+  <div class="col-lg-4 col-md-6 col-sm-12">
+    <div class="content-box">
+      <p class="item-name">Chicken</p>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<a href="#top">(Back to Top)</a></p>
+    </div>
   </div>
+
+  <div class="col-lg-4 col-md-6 col-sm-12">
+    <div class="content-box">
+      <p class="item-name">Beef</p>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<a href="#top">(Back to Top)</a></p>
+    </div>
   </div>
 
 
-  <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-1.11.3.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
+  <div class="col-lg-4 col-md-12 col-sm-12">
+    <div class="content-box">
+      <p class="item-name">Sushi</p>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<a href="#top">(Back to Top)</a></p>
+    </div>
+  </div>
+
+</div>
+
+
 </body>
 </html>
