--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,7 @@ of Simple CSS Waves-->
   <!--Content before waves-->
   <div class="inner-header flex">
     <!--Just the logo.. Don't mind this-->
-    <h1>CSS Waves</h1>
+    <h1>Gonzalo Germano</h1>
   </div>
 
   <div>
