--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
-  <title>CSS waves</title>
+  <title>GG CV</title>
 </head>
 <body>
 <!--Hey! This is the original version
