--- a/site/index.html
+++ b/site/index.html
@@ -3,17 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
-  <title>CSS waves</title>
+  <title>GG CV</title>
 </head>
 <body>
-<!--Hey! This is the original version
-of Simple CSS Waves-->
+
 
 <div class="header">
 
   <!--Content before waves-->
   <div class="inner-header flex">
-    <!--Just the logo.. Don't mind this-->
+    
     <h1>Gonzalo Germano</h1>
   </div>
 
