--- a/site/index.html
+++ b/site/index.html
@@ -36,5 +36,15 @@
   <!--Waves end-->
 
 </div>
+<p class="certificaciones"> Certificates </p>
+
+<p> IBM Cybersecurity Analyst <br>
+  <br>
+Google IT Automation with Python<br>
+<br>
+Linux Fundamental
+
+
+
 </body>
 </html>
